--- a/packages/mosaic/design-tokens/components/button-toggle.json5
+++ b/packages/mosaic/design-tokens/components/button-toggle.json5
@@ -1,11 +1,10 @@
 {
-    "button-toggle": {
-        "size": {
-            "border": {
-                "size": { "value": "1px" },
-                "radius": { "value": "3px" }
+    'button-toggle': {
+        size: {
+            border: {
+                size: { value: '1px' },
+                radius: { value: '3px' }
             }
-        },
-        "font": {}
+        }
     }
 }
