--- a/packages/mosaic/design-tokens/components/input.json5
+++ b/packages/mosaic/design-tokens/components/input.json5
@@ -1,10 +1,13 @@
 {
-    "input": {
-        "size": {
-            "padding": { "value": "5px 16px" },
-            "width": { "value": "100%" },
-            "min-height": { "value": "30px" }
+    input: {
+        size: {
+            padding: { value: '5px 16px' },
+            width: { value: '100%' },
+            'min-height': { value: '30px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' },
+            monospace: { value: 'body-mono' }
+        }
     }
 }
