--- a/packages/mosaic/design-tokens/components/progress-spinner.json5
+++ b/packages/mosaic/design-tokens/components/progress-spinner.json5
@@ -1,8 +1,7 @@
 {
-    "progress-spinner": {
-        "size": {
-            "size": { "value": "16px" }
-        },
-        "font": {}
+    'progress-spinner': {
+        size: {
+            size: { value: '16px' }
+        }
     }
 }
