--- a/packages/mosaic/design-tokens/components/sidepanel.json5
+++ b/packages/mosaic/design-tokens/components/sidepanel.json5
@@ -1,25 +1,30 @@
 {
-    "sidepanel": {
-        "light-color-scheme": {
-            "border": { "value": "{light-color-scheme.second.palette.value.300.value}" }
+    sidepanel: {
+        'light-color-scheme': {
+            border: { value: '{light-color-scheme.second.palette.value.300.value}' }
         },
-        "dark-color-scheme": {
-            "border": { "value": "{dark-color-scheme.second.palette.value.800.value}" }
+        'dark-color-scheme': {
+            border: { value: '{dark-color-scheme.second.palette.value.800.value}' }
         },
-        "size": {},
-        "font": {}
+        font: {
+            default: { value: 'body' }
+        }
     },
-    "sidepanel-header": {
-        "size": {
-            "padding": { "value": "14px 16px" },
-            "close-padding": { "value": "0 0 0 8px" }
+    'sidepanel-header': {
+        size: {
+            padding: { value: '14px 16px' },
+            'close-padding': { value: '0 0 0 8px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'title' }
+        }
     },
-    "sidepanel-footer": {
-        "size": {
-            "padding": { "value": "16px" }
+    'sidepanel-footer': {
+        size: {
+            padding: { value: '16px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' }
+        }
     }
 }
