--- a/packages/mosaic/design-tokens/components/autocomplete.json5
+++ b/packages/mosaic/design-tokens/components/autocomplete.json5
@@ -1,12 +1,11 @@
 {
-    "autocomplete": {
-        "size": {
-            "panel": {
-                "padding": { "value": "4px 0" },
-                "max-height": { "value": "256px" },
-                "border-radius": { "value": "3px" }
+    autocomplete: {
+        size: {
+            panel: {
+                padding: { value: '4px 0' },
+                'max-height': { value: '256px' },
+                'border-radius': { value: '3px' }
             }
-        },
-        "font": {}
+        }
     }
 }
