--- a/packages/mosaic/design-tokens/components/divider.json5
+++ b/packages/mosaic/design-tokens/components/divider.json5
@@ -1,9 +1,8 @@
 {
-    "divider": {
-        "size": {
-            "width": { "value": "1px" },
-            "inset-margin": { "value": "80px" }
-        },
-        "font": {}
+    divider: {
+        size: {
+            width: { value: '1px' },
+            'inset-margin': { value: '80px' }
+        }
     }
 }
