--- a/packages/mosaic/design-tokens/components/list.json5
+++ b/packages/mosaic/design-tokens/components/list.json5
@@ -1,17 +1,19 @@
 {
-    "list": {
-        "size": {
-            "horizontal-padding": { "value": "15px" },
-            "icon-padding": { "value": "4px" },
+    list: {
+        size: {
+            'horizontal-padding': { value: '15px' },
+            'icon-padding': { value: '4px' },
 
-            "item-height": { "value": "28px" },
+            'item-height': { value: '28px' },
 
-            "two-line-height": { "value": "72px" },
-            "three-line-height": { "value": "88px" },
-            "multi-line-padding": { "value": "16px" },
+            'two-line-height': { value: '72px' },
+            'three-line-height': { value: '88px' },
+            'multi-line-padding': { value: '16px' },
 
-            "icon-width": { "value": "24px" }
+            'icon-width': { value: '24px' }
         },
-        "font": {}
+        font: {
+            item: { value: 'body' }
+        }
     }
 }
