--- a/packages/mosaic/design-tokens/components/optgroup.json5
+++ b/packages/mosaic/design-tokens/components/optgroup.json5
@@ -1,8 +1,10 @@
 {
-    "optgroup": {
-        "size": {
-            "padding-left": { "value": "17px" }
+    optgroup: {
+        size: {
+            'padding-left': { value: '17px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'subheading' }
+        }
     }
 }
