--- a/packages/mosaic/design-tokens/components/option.json5
+++ b/packages/mosaic/design-tokens/components/option.json5
@@ -1,10 +1,12 @@
 {
-    "option": {
-        "size": {
-            "padding": { "value": "0 16px" },
-            "height": { "value": "32px" },
-            "border-width": { "value": "2px" }
+    option: {
+        size: {
+            padding: { value: '0 16px' },
+            height: { value: '32px' },
+            'border-width': { value: '2px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' }
+        }
     }
 }
