--- a/packages/mosaic/design-tokens/components/progress-bar.json5
+++ b/packages/mosaic/design-tokens/components/progress-bar.json5
@@ -1,14 +1,13 @@
 {
-    "progress-bar": {
-        "light-color-scheme": {
-            "background": { "value": "{light-color-scheme.second.palette.value.60.value}" }
+    'progress-bar': {
+        'light-color-scheme': {
+            background: { value: '{light-color-scheme.second.palette.value.60.value}' }
         },
-        "dark-color-scheme": {
-            "background": { "value": "{dark-color-scheme.second.palette.value.600.value}" }
+        'dark-color-scheme': {
+            background: { value: '{dark-color-scheme.second.palette.value.600.value}' }
         },
-        "size": {
-            "height": { "value": "4px" }
-        },
-        "font": {}
+        size: {
+            height: { value: '4px' }
+        }
     }
 }
