--- a/packages/mosaic/design-tokens/components/radio.json5
+++ b/packages/mosaic/design-tokens/components/radio.json5
@@ -1,46 +1,48 @@
 {
-    "radio": {
-        "light-color-scheme": {
-            "outer-circle-border": { "value": "{light-color-scheme.second.palette.value.300.value}" },
-            "inner-circle-border": { "value": "transparent" },
+    radio: {
+        'light-color-scheme': {
+            'outer-circle-border': { value: '{light-color-scheme.second.palette.value.300.value}' },
+            'inner-circle-border': { value: 'transparent' },
 
-            "states": {
-                "checked": {
-                    "outer-circle-border": { "value": "{light-color-scheme.primary.palette.value.500.value}" },
-                    "inner-circle-border": { "value": "{light-color-scheme.primary.palette.value.500.value}" }
+            states: {
+                checked: {
+                    'outer-circle-border': { value: '{light-color-scheme.primary.palette.value.500.value}' },
+                    'inner-circle-border': { value: '{light-color-scheme.primary.palette.value.500.value}' }
 
                 },
-                "focused": {
-                    "outer-circle-border": { "value": "{light-color-scheme.states.focused-color.value}" },
-                    "outer-circle-shadow": { "value": "0 0 0 2px {light-color-scheme.second.palette.value.300.value}" },
-                    "inner-circle-shadow": { "value": "0 0 0 1px {light-color-scheme.background.background.value}" }
+                focused: {
+                    'outer-circle-border': { value: '{light-color-scheme.states.focused-color.value}' },
+                    'outer-circle-shadow': { value: '0 0 0 2px {light-color-scheme.second.palette.value.300.value}' },
+                    'inner-circle-shadow': { value: '0 0 0 1px {light-color-scheme.background.background.value}' }
                 }
             }
         },
-        "dark-color-scheme": {
-            "outer-circle-border": { "value": "{dark-color-scheme.second.palette.value.400.value}" },
-            "inner-circle-border": { "value": "transparent" },
+        'dark-color-scheme': {
+            'outer-circle-border': { value: '{dark-color-scheme.second.palette.value.400.value}' },
+            'inner-circle-border': { value: 'transparent' },
 
-            "states": {
-                "checked": {
-                    "outer-circle-border": { "value": "{dark-color-scheme.primary.palette.value.400.value}" },
-                    "inner-circle-border": { "value": "{dark-color-scheme.primary.palette.value.600.value}" }
+            states: {
+                checked: {
+                    'outer-circle-border': { value: '{dark-color-scheme.primary.palette.value.400.value}' },
+                    'inner-circle-border': { value: '{dark-color-scheme.primary.palette.value.600.value}' }
                 },
-                "focused": {
-                    "outer-circle-border": { "value": "{dark-color-scheme.states.focused-color.value}" },
-                    "outer-circle-shadow": { "value": "0 0 0 2px {dark-color-scheme.states.focused-color.value}" },
+                focused: {
+                    'outer-circle-border': { value: '{dark-color-scheme.states.focused-color.value}' },
+                    'outer-circle-shadow': { value: '0 0 0 2px {dark-color-scheme.states.focused-color.value}' },
 
-                    "inner-circle-shadow": { "value": "0 0 0 1px {dark-color-scheme.background.background.value}" }
+                    'inner-circle-shadow': { value: '0 0 0 1px {dark-color-scheme.background.background.value}' }
                 }
             }
         },
-        "size": {
-            "size": { "value": "14px" },
-            "padding": {
-                "value": "24px",
-                "comment": "Padding between radio inputs and their labels"
+        size: {
+            size: { value: '14px' },
+            padding: {
+                value: '24px',
+                comment: 'Padding between radio inputs and their labels'
             }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' }
+        }
     }
 }
