--- a/packages/mosaic/design-tokens/components/tabs.json5
+++ b/packages/mosaic/design-tokens/components/tabs.json5
@@ -1,20 +1,22 @@
 {
-    "tabs": {
-        "light-color-scheme": {
-            "border": { "value": "{light-color-scheme.second.palette.value.300.value}" },
-            "state-active": { "value": "{light-color-scheme.primary.palette.value.500.value}" }
+    tabs: {
+        'light-color-scheme': {
+            border: { value: '{light-color-scheme.second.palette.value.300.value}' },
+            'state-active': { value: '{light-color-scheme.primary.palette.value.500.value}' }
         },
-        "dark-color-scheme": {
-            "border": { "value": "{dark-color-scheme.second.palette.value.300.value}" },
-            "state-active": { "value": "{dark-color-scheme.primary.palette.value.400.value}" }
+        'dark-color-scheme': {
+            border: { value: '{dark-color-scheme.second.palette.value.300.value}' },
+            'state-active': { value: '{dark-color-scheme.primary.palette.value.400.value}' }
         },
-        "size": {
-            "height": { "value": "40px" },
-            "highlight-height": { "value": "4px" },
-            "padding-horizontal": { "value": "16px" },
-            "border-width": { "value": "1px" },
-            "border-radius": { "value": "3px" }
+        size: {
+            height: { value: '40px' },
+            'highlight-height': { value: '4px' },
+            'padding-horizontal': { value: '16px' },
+            'border-width': { value: '1px' },
+            'border-radius': { value: '3px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' }
+        }
     }
 }
