--- a/packages/mosaic/design-tokens/components/textarea.json5
+++ b/packages/mosaic/design-tokens/components/textarea.json5
@@ -1,9 +1,12 @@
 {
-    "textarea": {
-        "size": {
-            "min-height": { "value": "50px" },
-            "padding": { "value": "5px 16px" }
+    textarea: {
+        size: {
+            'min-height': { value: '50px' },
+            padding: { value: '5px 16px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' },
+            mono: { value: 'body-mono' }
+        }
     }
 }
