--- a/packages/mosaic/design-tokens/components/toggle.json5
+++ b/packages/mosaic/design-tokens/components/toggle.json5
@@ -1,51 +1,55 @@
 {
-    "toggle": {
-        "light-color-scheme": {
-            "border": { "value": "{light-color-scheme.foreground.border.value}" },
-            "background": {
-                "value": "linear-gradient(to bottom, {light-color-scheme.second.palette.value.100.value}, {light-color-scheme.background.background-disabled.value})"
+    toggle: {
+        'light-color-scheme': {
+            border: { value: '{light-color-scheme.foreground.border.value}' },
+            background: {
+                value: 'linear-gradient(to bottom, {light-color-scheme.second.palette.value.100.value}, {light-color-scheme.background.background-disabled.value})'
             },
-            "circle-border": { "value": "{light-color-scheme.foreground.border.value}" },
-            "circle-background": { "value": "linear-gradient(to bottom, white, {light-color-scheme.second.palette.value.100.value})" },
+            'circle-border': { value: '{light-color-scheme.foreground.border.value}' },
+            'circle-background': { value: 'linear-gradient(to bottom, white, {light-color-scheme.second.palette.value.100.value})' },
 
-            "states": {
-                "focused": {
-                    "shadow": {
-                        "value": "inset 0 0 0 1px {light-color-scheme.background.background.value}, 0 0 0 2px {light-color-scheme.primary.palette.value.500.value}"
+            states: {
+                focused: {
+                    shadow: {
+                        value: 'inset 0 0 0 1px {light-color-scheme.background.background.value}, 0 0 0 2px {light-color-scheme.primary.palette.value.500.value}'
                     }
                 }
             }
         },
-        "dark-color-scheme": {
-            "border": { "value": "{dark-color-scheme.foreground.border.value}" },
-            "background": {
-                "value": "{dark-color-scheme.background.background.value}"
+        'dark-color-scheme': {
+            border: { value: '{dark-color-scheme.foreground.border.value}' },
+            background: {
+                value: '{dark-color-scheme.background.background.value}'
             },
-            "circle-border": { "value": "{dark-color-scheme.foreground.border.value}" },
-            "circle-background": { "value": "white" },
+            'circle-border': { value: '{dark-color-scheme.foreground.border.value}' },
+            'circle-background': { value: 'white' },
 
-            "states": {
-                "focused": {
-                    "shadow": {
-                        "value": "inset 0 0 0 1px {dark-color-scheme.background.background.value}, 0 0 0 2px {dark-color-scheme.primary.palette.value.400.value}"
+            states: {
+                focused: {
+                    shadow: {
+                        value: 'inset 0 0 0 1px {dark-color-scheme.background.background.value}, 0 0 0 2px {dark-color-scheme.primary.palette.value.400.value}'
                     }
                 }
             }
         },
-        "size": {
-            "height": { "value": "16px" },
-            "width": { "value": "28px" },
-            "border-radius": { "value": "9px" },
-            "label-margin": { "value": "8px" }
+        size: {
+            height: { value: '16px' },
+            width: { value: '28px' },
+            'border-radius': { value: '9px' },
+            'label-margin': { value: '8px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' }
+        }
     },
-    "toggle-small": {
-        "size": {
-            "height": { "value": "14px" },
-            "width": { "value": "24px" },
-            "border-radius": { "value": "8px" }
+    'toggle-small': {
+        size: {
+            height: { value: '14px' },
+            width: { value: '24px' },
+            'border-radius': { value: '8px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'caption' }
+        }
     }
 }
