--- a/packages/mosaic/design-tokens/components/vertical-navbar.json5
+++ b/packages/mosaic/design-tokens/components/vertical-navbar.json5
@@ -1,55 +1,56 @@
 {
-    "vertical-navbar": {
-        "light-color-scheme": {
-            "background": { "value": "{light-color-scheme.primary.palette.value.700.value}" },
-            "text": { "value": "{light-color-scheme.primary.palette.value.contrast.700.value}" },
-            "toggle-button": { "value": "{light-color-scheme.primary.palette.value.contrast.700.value}" },
-            "states": {
-                "active": {
-                    "background": { "value": "lighten({light-color-scheme.primary.palette.value.700.value}, 5%)" }
+    'vertical-navbar': {
+        'light-color-scheme': {
+            background: { value: '{light-color-scheme.primary.palette.value.700.value}' },
+            text: { value: '{light-color-scheme.primary.palette.value.contrast.700.value}' },
+            'toggle-button': { value: '{light-color-scheme.primary.palette.value.contrast.700.value}' },
+            states: {
+                active: {
+                    background: { value: 'lighten({light-color-scheme.primary.palette.value.700.value}, 5%)' }
                 },
-                "hover": {
-                    "background": { "value": "lighten({light-color-scheme.primary.palette.value.700.value}, 5%)" }
+                hover: {
+                    background: { value: 'lighten({light-color-scheme.primary.palette.value.700.value}, 5%)' }
                 },
-                "progress": {
-                    "background": { "value": "lighten({light-color-scheme.primary.palette.value.800.value}, 15%)" }
+                progress: {
+                    background: { value: 'lighten({light-color-scheme.primary.palette.value.800.value}, 15%)' }
                 }
             }
         },
-        "dark-color-scheme": {
-            "background": { "value": "{dark-color-scheme.primary.palette.value.700.value}" },
-            "text": { "value": "{dark-color-scheme.primary.palette.value.contrast.700.value}" },
-            "toggle-button": { "value": "{dark-color-scheme.primary.palette.value.contrast.700.value}" },
-            "states": {
-                "active": {
-                    "background": { "value": "lighten({dark-color-scheme.primary.palette.value.700.value}, 5%)" }
+        'dark-color-scheme': {
+            background: { value: '{dark-color-scheme.primary.palette.value.700.value}' },
+            text: { value: '{dark-color-scheme.primary.palette.value.contrast.700.value}' },
+            'toggle-button': { value: '{dark-color-scheme.primary.palette.value.contrast.700.value}' },
+            states: {
+                active: {
+                    background: { value: 'lighten({dark-color-scheme.primary.palette.value.700.value}, 5%)' }
                 },
-                "hover": {
-                    "background": { "value": "lighten({dark-color-scheme.primary.palette.value.700.value}, 5%)" }
+                hover: {
+                    background: { value: 'lighten({dark-color-scheme.primary.palette.value.700.value}, 5%)' }
                 },
-                "progress": {
-                    "background": { "value": "lighten({dark-color-scheme.primary.palette.value.800.value}, 15%)" }
+                progress: {
+                    background: { value: 'lighten({dark-color-scheme.primary.palette.value.800.value}, 15%)' }
                 }
             }
         },
-        "size": {},
-        "font": {}
-    },
-    "vertical-navbar-item": {
-        "size": {
-            "height": { "value": "64px" },
-            "margin": { "value": "1px 0" },
-            "padding-horizontal": { "value": "16px" },
-            "icon-margin-right": { "value": "16px" }
-        },
-        "font": {
-            "icon-size": { "value": "32px" }
+        font: {
+            header: { value: 'title' }
         }
     },
-    "navbar-badge": {
-        "size": {
-            "width": { "value": "64px" }
+    'vertical-navbar-item': {
+        size: {
+            height: { value: '64px' },
+            'margin': { value: '1px 0' },
+            'padding-horizontal': { value: '16px' },
+            'icon-margin-right': { value: '16px' }
         },
-        "font": {}
+        font: {
+            default: { value: 'body' },
+            'icon-size': { value: '32px' }
+        }
+    },
+    'navbar-badge': {
+        size: {
+            width: { value: '64px' }
+        }
     }
 }
