--- a/packages/mosaic/design-tokens/properties/font.json5
+++ b/packages/mosaic/design-tokens/properties/font.json5
@@ -1,11 +1,11 @@
 {
-    "font": {
-        "family": {
-            "base": {
-                "value": "Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif"
+    font: {
+        family: {
+            base: {
+                value: "Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif"
             },
-            "monospace": {
-                "value": "'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace"
+            monospace: {
+                value: "'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace"
             }
         }
     }
